# crowd-sequence

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
client/: package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.tsx  index.css
client/src/components/: index.ts
client/src/components/instrument/: instrument.jsx
client/src/components/instruments/: sampler.jsx  synth.jsx
client/src/components/stepSequencer/: stepSequencer.scss  stepSequencer.tsx
client/src/context/: roomContext.tsx
client/src/hooks/: index.ts  roomReducer.ts  useSocket.ts
client/src/models/: models.ts
client/src/models/proto/: models_pb.d.ts  models_pb.js
client/src/utils/: server.ts
client/src/views/: index.ts
client/src/views/login/: login.tsx
client/src/views/room/: panel.tsx  room.tsx  track.tsx  tracks.tsx
client/src/views/room2/: room.tsx
client/src/views/testspace/: testspace.jsx
proto/: models.proto
server/: init.py  main.py  utils.py
server/models/: models_pb2.py
